fix body background on mobile
fix body bg white flashing on mobile when scrolling the page

--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,12 @@
 }
 
 html {
-  min-height: 100%;
   box-sizing: border-box;
   font-size: 12px;
 }
 
 body {
-  min-height: 100%;
+  min-height: 100vh;
   background: var(--bg-violet);
   background: var(--bg-gradient);
   color: var(--base-text-color);
